2003-08-03  Ron Steinke <rsteinke@w-link.net>

	* configure.ac: changed AM_CONFIG_HEADER([config.h]) to
	  AM_CONFIG_HEADER(config.h), since automake 1.4 was interpreting
	  [config.h] as a literal.

2003-08-03  Ron Steinke <rsteinke@w-link.net>

	* Atlas/Objects/BaseObject.cpp, Atlas/Objects/BaseObject.h,
	  Atlas/Objects/gen_cpp.py: Added new function BaseObjectData::find().
	  In the process replaced virtual public hasAttr() function
	  with virtual protected getAttrClass() function, which
	  returns the class_no of the class that has the attribute
	  instead of just bool. The (now non-virtual) hasAttr()
	  in BaseObjectData wraps getAttrClass().
	* Atlas/Objects/BaseObject.h: Added a const_iterator
	  constructor from iterator.

2003-08-05  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/GenerateDispatcher.py: Fix generated dispatcher
	  code for new SmartPtr casts.

2003-08-04  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/SmartPtr.h, Atlas/Objects/SmartPtr.cpp:
	  Allow SmartPtr to be NULL, so we can use it for return values
	  less clumsily.

2003-07-30  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Negotiate.h: Removed unused Debug() macro. It was polluting
	  the global namespace.

2003-07-23  Al Riddoch  <alriddoch@zepler.org>

	* Ensure configure.ac does the important tests in C++.

2003-07-23  Al Riddoch  <alriddoch@zepler.org>

	* Switch to a cleaned up configure.ac.

2003-07-22  Ron Steinke <rsteinke@w-link.net>

	* Added internal refcounting to Atlas::Message::Element,
	  it should be user-transparent as long as you don't
	  hold a non-const reference to Element internals
	  across code that makes a copy of the same element.
	* Added iterator and const_iterator classes to BaseObjectData.

2003-07-03  Al Riddoch  <alriddoch@zepler.org>

	* Tweaks to the updated rpm spec.

2003-07-03  Al Riddoch  <alriddoch@zepler.org>

	* Update rpm spec to be cleaner, and make the technical sections
	  more generic.
